add change password to upgrade jwt versionn
